fix: fix working of OpenAPI and add module for proto files