@@ -3,7 +3,6 @@ package backend.academy.linktracker.bot.exception;
 import backend.academy.linktracker.bot.dto.ApiErrorResponse;
 import java.util.Arrays;
 import java.util.List;
-import java.util.stream.Collectors;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.http.HttpStatus;
 import org.springframework.web.bind.annotation.ExceptionHandler;
@@ -21,14 +20,20 @@ public class GlobalExceptionHandler {
                 .addKeyValue("message", e.getMessage())
                 .log("Controller error");
 
-        return new ApiErrorResponse(
-                e.getMessage(), "400", e.getClass().getSimpleName(), e.getMessage(), getStackTrace(e));
+        ApiErrorResponse error = new ApiErrorResponse();
+        error.setDescription(e.getMessage());
+        error.setCode("400");
+        error.setExceptionName(e.getClass().getSimpleName());
+        error.setExceptionMessage(e.getMessage());
+        error.setStacktrace(getStackTrace(e));
+
+        return error;
     }
 
     private List<String> getStackTrace(Exception e) {
         return Arrays.stream(e.getStackTrace())
                 .map(StackTraceElement::toString)
                 .limit(10)
-                .collect(Collectors.toList());
+                .toList();
     }
 }
